# sieve-backdoor

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
configs/: benign_requests.txt  preregistration.yaml
docs/: build_prompt.md
results/: demo_cell_D2xA1.json  positive_control.json  positive_control_v2.json  scorecard.json  scorecard.md
results/llama3b/: manifest.json  scorecard.json  scorecard.md
results/llama3b_fixed/: scorecard.json  scorecard.md
results/qwen7b/: scorecard.json  scorecard.md
results/qwen7b_A7A8/: manifest.json  scorecard.json  scorecard.md
results/qwen7b_fixed/: manifest.json  scorecard.json  scorecard.md
scripts/: demo_cell.py  diag_weight_stats.py  make_manifest.py  positive_control.py  reanalyze.py  rescore_positive_control.py  run_grid.py  smoke_rig.py
sieve_backdoors/: cost.py
sieve_backdoors/attacker/: common_attacker.py  eval_triggers.py
sieve_backdoors/attacks/: _common.py  adapter_only.py  base.py  diffuse_payload.py  memorization_min.py  probe_adaptive.py  semantic_trigger.py  stealth_composite.py  token_trigger.py  weight_stealthy.py
sieve_backdoors/detectors/: activation_probe.py  base.py  output_anomaly.py  reference_free.py  trigger_reconstruction.py  weight_difference.py
sieve_backdoors/grid/: causal.py  persist.py  runner.py  scorecard.py  verdicts.py
sieve_backdoors/models/: activations.py  corpus.py  data.py  loaded.py  registry.py
sieve_backdoors/payloads/: benign.py
sieve_backdoors/sieve/: bundle.py  (+10 more)
tests/: test_interfaces.py  test_payloads_safety.py  test_prereg_and_registry.py  test_verdicts.py
